# Scan

./: settings.gradle
ScanCode/: CMakeLists.txt  build.gradle  build_opencv_from_android.sh
ScanCode/src/androidTest/java/com/zwj/scancode/: ExampleInstrumentedTest.kt
ScanCode/src/main/: AndroidManifest.xml
ScanCode/src/main/cpp/: Distinguish.cpp  Distinguish.h  ImageData.cpp  ImageData.h  JavaCallHelper.cpp  JavaCallHelper.h  Utils.cpp  Utils.h  XLog.h  XThread.h  scan.cpp
ScanCode/src/main/cpp/zxing/src/: Result.cpp
ScanCode/src/main/java/com/palmpay/scan/bean/: CameraDataBean.java  CodeBean.java  ScanCodeType.kt  ScanMode.kt  ScanType.kt
ScanCode/src/main/java/com/palmpay/scan/callback/: OnScanListener.kt
ScanCode/src/main/java/com/palmpay/scan/code/: BitMapCallBack.java  NativeLib.java
ScanCode/src/main/java/com/palmpay/scan/utils/: CodeUtils.kt  SizeExt.kt  Utils.java  Utils.kt
ScanCode/src/main/java/com/palmpay/scan/view/: BoxView.kt  CameraView.kt  CameraXView.kt  CodePointView.kt  ScanLineView.kt  ScanType.kt  ScanView.kt
ScanCode/src/main/res/drawable/: scan_code_point.xml
ScanCode/src/main/res/values/: colors.xml
ScanCode/src/test/java/com/zwj/scancode/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/zwj/scan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zwj/scan/: MainActivity.kt  ScanActivity.kt  TestActivity.java
app/src/main/res/layout/: activity_main.xml  activity_scan.xml  test_activity.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zwj/scan/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_scan/: CMakeLists.txt  build.gradle
lib_scan/libs/include/opencv2/: opencv_modules.hpp
lib_scan/src/androidTest/java/com/palmpay/scan/: ExampleInstrumentedTest.kt
lib_scan/src/main/: AndroidManifest.xml
lib_scan/src/main/cpp/: Distinguish.cpp  Distinguish.h  JavaCallHelper.cpp  JavaCallHelper.h  Utils.cpp  XThread.cpp  YuvUtils.cpp  scan.cpp
lib_scan/src/main/cpp/zxing/: CMakeLists.txt
lib_scan/src/main/java/com/palmpay/scan/bean/: CodeBean.java  CodeData.java  ScanMode.kt
lib_scan/src/main/java/com/palmpay/scan/code/: NativeLib.java  PointCallBack.java  YuvUtils.java
lib_scan/src/main/java/com/palmpay/scan/utils/: BitmapUtil.java  Utils.kt
lib_scan/src/main/java/com/palmpay/scan/view/: BoxView.kt  CameraView.kt  CameraXView.kt  CodePointView.kt  ScanLineView.kt  ScanView.kt
lib_scan/src/main/res/values/: attrs.xml
lib_scan/src/test/java/com/palmpay/scan/: ExampleUnitTest.kt
